--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.junit</groupId>
+			<artifactId>junit-bom</artifactId>
+			<version>5.7.0-M1</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
 		
 		
 	</dependencies>
